# gotmgui

./: .gitignore  CMakeLists.txt  README.md  setup.py
gotmgui/: CMakeLists.txt  __main__.py  batch.py  commonqt.py  gotmgui.py  scenariobuilder.py  simulator.py  visualizer.py
gotmgui/WiX/: buildmsi.py
gotmgui/core/: common.py  namelist.py  report.py  result.py  scenario.py  settings.py  simulator.py
gotmgui/schemas/scenario/: gotm-5.0_gotmgui-0.5.0.converter  gotm-5.2_gotmgui-0.5.0.converter  gotm-5.3_gotmgui-0.5.0.converter
gotmgui/unittest/: simulate.py
gotmgui/util/: extractncdata.py  mergeobs.py  nml2xml.py  xml2nml.py
